# SimEVO

./: .gitignore  .todos.yml  DOCS.md  LICENSE  README.md  distribution_after.txt  distribution_before.txt  itter creating a ColorschemeOAOAOAOAOAOAOAOAOAOAOAOAusage: git tag [-a | -s | -u <key-id>] [-f] [-m <msg> | -F <file>]  main.py  notes.txt  organism.py  population.py  requirements.txt  setup.cfg
charts/: distribution_after.txt  distribution_before.txt
notes/: DevLog.md  Theoretical.md  TheoreticalBasis.aux  TheoreticalBasis.fdb_latexmk  TheoreticalBasis.fls  TheoreticalBasis.out  TheoreticalBasis.tex  TheoreticalBasis.toc  evolution tests.ipynb  notes.md
notes/.ipynb_checkpoints/: evolution tests-checkpoint.ipynb  evolution-tests-checkpoint.ipynb
notes/devjournal/: development.aux  development.dvi  development.fdb_latexmk  development.fls  development.out  development.tex  development.toc
notes/latex/: evolutionary-algorithm.aux  evolutionary-algorithm.fdb_latexmk  evolutionary-algorithm.fls  evolutionary-algorithm.logistic.gnuplot  evolutionary-algorithm.tex
src/: behaviournet.py  evolution.py  liveplot.py  main.py  organism.py  package.json  plot.py  population.py  run.py  simevo.py  visualize.py
src/backend/: main.py  organism.py
src/csv/: .~lock.population_data.csv#  data_plot.csv  fitness_distribution.csv  population_data.csv
src/evosim.egg-info/: PKG-INFO  SOURCES.txt
src/frontend/: visuals.py
src/runtime/: analysis.m  data.csv  numpy_analysis.py  runtime.py
src/simevo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+2 files in other folders)
