[metadata]
name = simevo
version = 1.0.0
author = Kári Hlynsson
author_email = kari.hlynsson@gmail.com
description = A tool for simulating adaptation of natural populations over time 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lvthnn/SimEVO
keywords = biology, evolution, simulation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
